Area calculator should be working.

--- a/web/calculator.html
+++ b/web/calculator.html
@@ -10,15 +10,15 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <form id="form1" name="form1" method="POST" action="greeter">
-            <p>Please insert your first name.<p>
+        <form id="form1" name="form1" method="POST" action="calculator">
+            <p>Please insert a length and width.<p>
             <p>First name:
-                <!-- the name attribute is set to 'color' which is the
-                     parameter to be retrieved by the servlet -->
-                <input id="firstName" type="text" name="firstName">
+                <input id="length" type="text" name="legth">
+                <br>
+                <input id="width" type="text" name="width">
             </p>
             <center>
-                <input id="nameSubmit" name="nameSubmit" type="submit" value="Submit">
+                <input id="submit" name="submit" type="submit" value="Submit">
             </center>
         </form>
     </body>
