Small Area calculator fix

--- a/web/calculator.html
+++ b/web/calculator.html
@@ -12,9 +12,9 @@ and open the template in the editor.
     <body>
         <form id="form1" name="form1" method="POST" action="calculator">
             <p>Please insert a length and width.<p>
-            <p>First name:
+            <p>Length:
                 <input id="length" type="text" name="legth">
-                <br>
+                <br>Width:
                 <input id="width" type="text" name="width">
             </p>
             <center>
