--- a/web/calculator.html
+++ b/web/calculator.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Welcome</title>
+        <title>Area Calculator</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
