--- a/web/calculator.html
+++ b/web/calculator.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <form id="form1" name="form1" method="POST" action="front?calcType=rectangle">
+        <form id="form1" name="form1" method="POST" action="calculator?calcType=rectangle">
             <h3>Rectangle Calculator</h3>
             <p>Please insert a length and width.<p>
             <p>Length:
@@ -22,7 +22,7 @@ and open the template in the editor.
                 <input id="submit" name="submit" type="submit" value="Submit">
             </center>
         </form>
-        <form id="form2" name="form2" method="POST" action="front?calcType=circle">
+        <form id="form2" name="form2" method="POST" action="calculator?calcType=circle">
             <h3>Circle Calculator</h3>
             <p>Please insert a radius.<p>
             <p>Radius:
@@ -32,7 +32,7 @@ and open the template in the editor.
                 <input id="submit" name="submit" type="submit" value="Submit">
             </center>
         </form>
-        <form id="form3" name="form3" method="POST" action="front?calcType=triangle">
+        <form id="form3" name="form3" method="POST" action="calculator?calcType=triangle">
             <h3>Triangle</h3>
             <p>Please insert a base and height.<p>
             <p>Base:
